public/css/style.css
/* ... */
 #video_link::-webkit-input-placeholder {
    color: #03A9F4;
  }

  #video_link::-moz-placeholder {
    color: #03A9F4;
  }

  #video_link:-moz-placeholder {
    color: #03A9F4;
  }
  #video_link:-ms-input-placeholder {
    color: #03A9F4;
  }
    




#evideo_link {
   
    position: fixed;
    top: 453px;
    height: 28px;
    width: 299px;
    left: 339px;
    z-index: 13;
    font-size: 12px;
    letter-spacing: 2px;
    left: 67px;
    top: 495px;
    font-style: italic;
    color: #03A9F4;
   
    
}


 
    

  
   #side-edit{
   
    font-size: 45px;
    letter-spacing: 17px;
    top: 119px;
    left: 1173px;
    height: 110px;
    transform: rotate(-90deg);
    z-index: 4;
    font-style: italic;
    position: fixed;
    border-color: transparent;
    color: #03a9f4;
}

#side-edit a:link {
  color: #bac;

}

#side-edit a {
  color: #bac;

}

  #servings {
    position: fixed;
    left: 314px;
    font-size: 17px;
    top: 104px;
    letter-spacing: 1px;
    font-style: italic;
    /* border-bottom-style: double; */
    border-radius: 10px;
    border-color: #03A9F4;
    border-style: solid;
    border-width: thin;
}


 #servings::-webkit-input-placeholder {
    color: #03A9F4;
  }

  #servings::-moz-placeholder {
    color: #03A9F4;
  }

  #servings:-moz-placeholder {
    color: #03A9F4;
  }
  #servings:-ms-input-placeholder {
    color: #03A9F4;
  }



  #eservings {
      position: fixed;
    left: 814px;
    font-size: 17px;
    top: 56px;
    letter-spacing: 1px;
    font-style: italic;
    color: #03A9F4;
}



#recipes-container {
    position: fixed;
    left: 651px;
    font-size: 23px;
    top: 312px;
    letter-spacing: 1px;
    /* font-style: italic; */
    color: white;
}

 #user-recipes-container {
    position: fixed;
    left: 344px;
    font-size: 23px;
    top: 310px;
    letter-spacing: 1px;
    font-style: italic;
    color: white;
}
  
  .recipes {
   
    
    left: 391px;
    font-size: 16px;
    letter-spacing: 1px;
    font-style: italic;
    

  }
  
  .my_recipes {
    color:white;

  }
   
   #delete {
    position: fixed;
    left: 1124px;
    font-size: 22px;
    top: 411px;
   }

 
  
  #please-sign-up {
    position:fixed;
    left:360px;
    top:580px;
    width:680px;
    height:90px;
    font-size: 15px;
    font-style:italic;
    letter-spacing: 8px;
    background-color: rgba(255, 168, 52, 0.02);
    color:#ff3823;
    font-family: Audiowide;
    border-style:none none solid none;
    z-index: 7;
  }

  #duplicate-name-error {
    position:fixed;
    left:240px;
    top:400px;
    width:680px;
    height:20px;
    font-size: 12px;
    font-style:italic;
    letter-spacing: 3px;
    background-color: rgba(255, 168, 52, 0.02);
    color:#ff3823;
    font-family: Audiowide;
    z-index: 4;
  }


  

